// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`$insert on a non array item should do nothing and be stripped 1`] = `
"{
	\\"1a\\": {
		\\"1aa\\": 1
	},
	\\"2b\\": {
		\\"2bb\\": 2
	}
}"
`;

exports[`when merging two arrays and the source item has $insert: - it should append the source array item 1`] = `
"{
	\\"a\\": [
		{
			\\"aa1\\": \\"string\\"
		},
		{
			\\"aa2\\": \\"string\\"
		},
		{
			\\"bb\\": \\"append\\"
		}
	]
}"
`;

exports[`when merging two arrays and the source item has $insert: -1 it should insert the source array item before the last item 1`] = `
"{
	\\"a\\": [
		{
			\\"aa1\\": \\"string\\"
		},
		{
			\\"bb\\": \\"insert before last\\"
		},
		{
			\\"aa2\\": \\"string\\"
		}
	]
}"
`;

exports[`when merging two arrays and the source item has $insert: 0 it should prepend the source array item 1`] = `
"{
	\\"a\\": [
		{
			\\"bb\\": \\"prepend\\"
		},
		{
			\\"aa\\": \\"string\\"
		}
	]
}"
`;

exports[`when merging two arrays and the source item has $insert: 1 and an other item also has $insert: 1 it should insert the last item at index 1 1`] = `
"{
	\\"a\\": [
		{
			\\"aa1\\": \\"string\\"
		},
		{
			\\"cc\\": \\"insert at index 1\\"
		},
		{
			\\"bb\\": \\"insert at index 2\\"
		},
		{
			\\"aa2\\": \\"string\\"
		}
	]
}"
`;

exports[`when merging two arrays and the source item has $insert: 1 it should insert the source array item at index 1 1`] = `
"{
	\\"a\\": [
		{
			\\"aa1\\": \\"string\\"
		},
		{
			\\"bb\\": \\"insert at index 1\\"
		},
		{
			\\"aa2\\": \\"string\\"
		}
	]
}"
`;

exports[`when merging two arrays and the source item has an $insert value higher than the target array length it should append the array item 1`] = `
"{
	\\"a\\": [
		{
			\\"aa1\\": \\"string\\"
		},
		{
			\\"aa2\\": \\"string\\"
		},
		{
			\\"bb\\": \\"append\\"
		}
	]
}"
`;
